change course header

--- a/0_Instalasi_Miniconda_dan_Modul.ipynb
+++ b/0_Instalasi_Miniconda_dan_Modul.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: #28a745 !important; color: white; min-height: 50px; padding: 10px; margin: auto;\">\n",
-    "    <p style=\"text-align: right; font-style: italic\">HMGI Long Course</p>\n",
+    "    <p style=\"text-align: right; font-style: italic\">STMKGxHMGI Long Course</p>\n",
     "    <h1>Pre-Sesi: Instalasi Miniconda dan Modul-modul yang Dipakai</h1>\n",
     "</div>\n",
     "<div style=\"background-color: whitesmoke; padding: 10px \">\n",
     "    <ul>\n",
     "        <li>Tujuan: Memperkenalkan cara instalasi Miniconda serta menggunakannya untuk manajemen paket termasuk Jupyter Notebook</li>\n",
     "        <li>Keluaran: Peserta dapat menjalankan Python, Miniconda, dan Jupyter Notebook dan memahami penggunaannya</li>\n",
-    "        <li>Presesi</li>\n",
+    "        <li>Sesi Persiapan</li>\n",
     "        <li>Waktu/Tempat: Jumat, 17 September 2021/ Mandiri</li>\n",
     "    </ul>\n",
     "</div>"
@@ -146,7 +146,7 @@
     "\n",
     "![confirmation](figures/confirm_install.png)\n",
     "\n",
-    "Instalasi membutuhkan waktu yang tidak sebentar jadi bisa ditunggu atau mengerjakan pekerjaan lain."
+    "Instalasi membutuhkan waktu yang tidak sebentar jadi bisa ditunggu atau mengerjakan pekerjaan lain. Proses ini cukup dilakukan 1x."
    ]
   },
   {
@@ -158,9 +158,10 @@
     "\n",
     "**Jupyter Notebook** merupakan salah satu paket (*package*) yang dapat diinstall dan memiliki fungsi untuk memberikan antarmuka pengguna grafis dalam penulisan kode dan membuat catatan bersama dengan kode tersebut. Sebuah paket bisa kita bayangkan sebagai kumpulan kode Python yang memiliki fungsi yang spesifik. Karena sudah dikemas dalam sebuah paket, maka kita hanya perlu memanggil paket tersebut saat akan menggunakannya, salah satunya **Jupyter Notebook** ini.\n",
     "\n",
-    "Setelah proses instalasi di atas selesai kita dapat pindah ke folder tempat kita akan menyimpan *notebook* kemudian menjalankan **Jupyter Notebook** dengan mengetikkan perintah di Anaconda Prompt kemudian tekan enter **CATATAN: pada screenshot di bawah ini dipaling kiri tertulis (base) karena screenshot belum diperbarui, yang benar seharusnya (envcourse) jadi tidak perlu dibingungkan**:\n",
+    "Setelah proses instalasi di atas selesai kita dapat pindah ke folder tempat kita akan menyimpan *notebook* kemudian menjalankan **Jupyter Notebook** dengan mengetikkan perintah di Anaconda Prompt kemudian tekan enter:\n",
     "\n",
     "```\n",
+    "conda activate envcourse\n",
     "D:\n",
     "cd workshop\n",
     "jupyter-notebook\n",
