--- a/1_Basic_Python_for_Seismology_2.ipynb
+++ b/1_Basic_Python_for_Seismology_2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: #28a745 !important; color: white; min-height: 50px; padding: 10px; margin: auto;\">\n",
-    "    <p style=\"text-align: right; font-style: italic\">HMGI Long Course</p>\n",
+    "    <p style=\"text-align: right; font-style: italic\">STMKGxHMGI Long Course</p>\n",
     "    <h1>Basic Python for Seismology 2</h1>\n",
     "</div>\n",
     "<div style=\"background-color: whitesmoke; padding: 10px \">\n",
