add colab branch and add depend install

--- a/1_Basic_Python_for_Seismology_2.ipynb
+++ b/1_Basic_Python_for_Seismology_2.ipynb
@@ -21,6 +21,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "15e1fb02",
+   "metadata": {},
+   "source": [
+    "# Menginstal Modul yang Dibutuhkan\n",
+    "\n",
+    "Bila menjalankan notebook melalui Google Colab kita perlu menginstall terlebih dahulu modul yang dibutuhkan dengna menjalankan kode di bawah ini. **Setelah selesai *harus* restart runtime terlebih dahulu dengan *Runtime-Restart runtime* baru setelah itu bisa melanjutkan.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "144c6448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!apt-get install libproj-dev proj-data proj-bin\n",
+    "!apt-get install libgeos-dev\n",
+    "!pip uninstall shapely -y\n",
+    "!pip install shapely --no-binary shapely\n",
+    "!pip install cython\n",
+    "!pip install cartopy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "interstate-harvey",
    "metadata": {},
    "source": [
