fix image error for merapi

--- a/2_Earthquake_Source_Simple_2_1.ipynb
+++ b/2_Earthquake_Source_Simple_2_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "869a1f5e",
+   "id": "6caca423",
    "metadata": {},
    "source": [
     "<div style=\"background-color: #28a745 !important; color: white; min-height: 50px; padding: 10px; margin: auto;\">\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1babcb1",
+   "id": "3953b10e",
    "metadata": {},
    "source": [
     "## Penentuan Hiposenter Pendekatan Analitik: Metode Geiger\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "ffcf2679",
+   "id": "840ada49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba024a4a",
+   "id": "eb21e1fd",
    "metadata": {},
    "source": [
     "kemudian membuat fungsi untuk menghitung waktu tempuh sesuai dengan persamaan maju, fungsi ini akan kita pakai juga saat inversi nanti:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "f03df176",
+   "id": "fa94a0e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7cd1c15",
+   "id": "931c9141",
    "metadata": {},
    "source": [
     "selanjutnya adalah menghitung waktu tiba sintetik untuk masing-masing stasiun:"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "e3b7869b",
+   "id": "e5d6c18d",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e046e7de",
+   "id": "5c8ebf96",
    "metadata": {},
    "source": [
     "#### Membuat tebakan\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "0aa12b34",
+   "id": "57ec86cf",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313599c9",
+   "id": "c862a9b7",
    "metadata": {},
    "source": [
     "#### Menghitung error  data\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "97e40d2c",
+   "id": "4ce3147d",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10fd3d33",
+   "id": "0a022814",
    "metadata": {},
    "source": [
     "dari data kalkulasi yang kita dapatkan $d_{calc}$ kita hitung nilai errornya dengan mengurangkan secara sederhana:"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "904f6bca",
+   "id": "897dbef8",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0682857c",
+   "id": "94a3429c",
    "metadata": {},
    "source": [
     "di atas merupakan perbedaan data observasi dan data_kalkulasi yang dapat kita simbolkan dengan $\\Delta d$, dengan nilai ini kita dapat melakukan inversi untuk mendapatkan koreksi model tetapi sebelumnya kita harus membuat algoritma untuk mencari matriks $G$."
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ed34c1",
+   "id": "26c88408",
    "metadata": {},
    "source": [
     "#### Membuat matriks Jacobian\n",
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "0a86320a",
+   "id": "9056c50c",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "854d5b4d",
+   "id": "dfd6ed8c",
    "metadata": {},
    "source": [
     "#### Melakukan inversi\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "c3d311e0",
+   "id": "ac6f088a",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6c81e0",
+   "id": "685013a3",
    "metadata": {},
    "source": [
     "nilai koreksi model ($\\Delta m$) diatas akan kita gunakan untuk mengoreksi model awal `guess`:"
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "d7d9ba1c",
+   "id": "a45bf42b",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb66cb60",
+   "id": "33ce0b37",
    "metadata": {},
    "source": [
     "dapat kita lihat bahwa nilai hiposenter dan tebakan sudah mulai mendekat ke nilai sebenarnya (16,15,17) dari tebakan awal (15,16,16). Untuk mengkuantifikasi dekat atau tidak kita dapat menggunakan nilai misfit dari $L_2$ norm:"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "9cd9ad44",
+   "id": "c9e0353e",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffcd11ea",
+   "id": "cd8af9b6",
    "metadata": {},
    "source": [
     "## Implementasi Iteratif\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "1bbdadcf",
+   "id": "e9d4c81b",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ede45ee1",
+   "id": "7bab1083",
    "metadata": {},
    "source": [
     "## Mengeplot hasil\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "756ffd43",
+   "id": "80af4d9a",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e99c9e",
+   "id": "eef25b5c",
    "metadata": {},
    "source": [
     "dari plot di atas dapat kita lihat bahwa titik bergeser dan lama-lama mendekati hiposenter sebenarnya, untuk memperjelas kita akan coba *zoom*:"
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "bd11f83c",
+   "id": "7e04bfa7",
    "metadata": {
     "scrolled": true
    },
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26975d0a",
+   "id": "ab600cf9",
    "metadata": {},
    "source": [
     "## Latihan\n",
@@ -676,12 +676,12 @@
     "|4|\tPasar Bubar|\t2569|\t439845|\t9166732| 1.26084491 |\n",
     "|5|\tKendil|\t1622|\t439937|\t9164018 | 1.2827079|\n",
     "\n",
-    "![geigermerapi](merapi_stations.png)"
+    "![geigermerapi](figures/merapi_stations.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0bc9f899",
+   "id": "0d495a37",
    "metadata": {},
    "source": [
     "## Solusi"
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "88afca93",
+   "id": "aa0c23ec",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ca0533",
+   "id": "8d2a7190",
    "metadata": {},
    "source": [
     "### Bonus Plot dengan DEM"
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "14d2fe66",
+   "id": "282e622e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "c0e49bb2",
+   "id": "bc89c04a",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87dd89a1",
+   "id": "8bcdcfd6",
    "metadata": {},
    "outputs": [],
    "source": []
