update to fix errors

--- a/2_Earthquake_Source_Simple_2_2.ipynb
+++ b/2_Earthquake_Source_Simple_2_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26cf9397",
+   "id": "2fa071ec",
    "metadata": {},
    "source": [
     "<div style=\"background-color: #28a745 !important; color: white; min-height: 50px; padding: 10px; margin: auto;\">\n",
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69856a7f",
+   "id": "b37f4e06",
    "metadata": {},
    "source": [
     "## Penentuan Hiposenter Pendekatan Probabilistik\n",
     "\n",
     "*Materi diadopsi dari: Igel, H., Geßele K., Seismic Inverse Problems: Probabilistic estimation of earthquake hypocenters, https://krischer.github.io/seismo_live_build/html/Seismic%20Inverse%20Problems/Earthquake%20Location/el_hypocenter_solution_wrapper.html*\n",
     "\n",
-    "Sebelumnya kita sudah menghitung hiposenter dengan pendekatan analitik melalui linearisasi dengan bantuan deret Taylor, di bagian ini kita akan mengaplikasikan pendekatan probabilistik yang diperkenalkan oleh Albert Tarantola []. Dalam pendekatan probabilistik, model dan data diwakilkan sebagai sebuah Probabilty Density Function (PDF). Dengan kata lain, model atau hasil akhir merupakan kumpulan solusi dengan nilai probabilitas tertentu, sehingga dalam menebak solusi pun kita bisa menggunakan banyak nilai.\n",
+    "Sebelumnya kita sudah menghitung hiposenter dengan pendekatan analitik melalui linearisasi dengan bantuan deret Taylor, di bagian ini kita akan mengaplikasikan pendekatan probabilistik yang diperkenalkan oleh Albert Tarantola. Dalam pendekatan probabilistik, model dan data diwakilkan sebagai sebuah Probabilty Density Function (PDF). Dengan kata lain, model atau hasil akhir merupakan kumpulan solusi dengan nilai probabilitas tertentu, sehingga dalam menebak solusi pun kita bisa menggunakan banyak nilai.\n",
     "\n",
     "Sama seperti pada pendekatan analitik, data observasi kita adalah waktu tiba gelombang P yang bisa dituliskan $\\mathbf{d_{obs}}=\\{t_1,t_2,t_3,t_4\\}$. Pada kasus ini kita akan menggunakan ruang 2D dengan sumbu lateral $X$ dan sumbu vertikal $Z$. Karena model yang akan kita cari adalah hiposenter dan origin time maka bisa kita tuliskan sebagai $\\mathbf{m}=\\{X,Z,T\\}$. Dengan kasus 2D ini persamaan maju dapat kita tuliskan sebagai:\n",
     "\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f931efb4",
+   "id": "da8dbbc9",
    "metadata": {},
    "source": [
     "### Membuat data sintetik\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eb7ff665",
+   "id": "289e36a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd941d32",
+   "id": "845627a5",
    "metadata": {},
    "source": [
     "Selanjutnya dengan persamaan maju kita dapat mendapatkan data waktu tiba sintetik:"
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "80e9bb1b",
+   "id": "e6c03df5",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a317f0b",
+   "id": "4f55f5e4",
    "metadata": {},
    "source": [
     "### Membuat ruang model eksplorasi\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "e16e10d1",
+   "id": "f15282d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78007995",
+   "id": "b6a21a74",
    "metadata": {},
    "source": [
     "Pada contoh di atas kita akan menebak koordinat x hiposenter dari 0 sampai 34 dengan lompatan 1 (0,1,2,3,....,34), koordinat z hiposenter dari 0 sampai 24 dengan lompatan 1 (0,1,2,3,.....,24), serta origin time dari 10 sampai 30 dengan lompatan 0,5 (10,10.5,11.0,.....,33.5). Totak titik ruang model yang menjadi tebakan dapat kita hitung dengan mengalikan 35, 25, dengan 40 yaitu 35000. Ruang model yang akan dieksplorasi untuk hiposenter (`space_x`, dan `space_z`) dapat kita gambarkan dengan bantuan `np.meshgrid`:"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a8bbc7b2",
+   "id": "6645dff2",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a40ade29",
+   "id": "90611aed",
    "metadata": {},
    "source": [
     "Jika ingin memvisualisasikan juga untuk origin time kita bisa memanfaatkan proyeksi 3D:"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e7fbabad",
+   "id": "b236981b",
    "metadata": {},
    "outputs": [
     {
@@ -1192,9 +1192,6 @@
     }
    ],
    "source": [
-    "#agar interaktif (bisa digeser)\n",
-    "%matplotlib notebook \n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -1215,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7632a584",
+   "id": "6f50527f",
    "metadata": {},
    "source": [
     "### Menyelesaikan inversi hiposenter\n",
@@ -1226,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7643105e",
+   "id": "ed193782",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb54d49",
+   "id": "a6f34b37",
    "metadata": {},
    "source": [
     "### Menghitung *marginal a posteriori probability*\n",
@@ -1270,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "50f9c604",
+   "id": "5561bfcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c5738f6",
+   "id": "af1a456f",
    "metadata": {},
    "source": [
     "## Mengeplot hasil\n",
@@ -1307,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "220b43f3",
+   "id": "c3e62283",
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21756613",
+   "id": "4b346fe8",
    "metadata": {},
    "source": [
     "Dimana posisi hiposenter dan origin time dengan nilai probabilitas tertinggi?\n",
@@ -1364,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "d0cad1bd",
+   "id": "edb369d0",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "399b5b8e",
+   "id": "bd09283a",
    "metadata": {},
    "source": [
     "Menggunakan 3 indeks di atas kita dapat mengetahui parameter model dengan nilai probabilitas yang maksimum:"
@@ -1391,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "f558b6cb",
+   "id": "4f480109",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b9eead0",
+   "id": "f75aea81",
    "metadata": {},
    "source": [
     "Selanjutnya kita plot hasil tersebut:"
@@ -1426,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ea7ace95",
+   "id": "a684547f",
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc7d542",
+   "id": "4a8007ac",
    "metadata": {},
    "source": [
     "plot untuk $X$,$Y$, dan $T$:"
@@ -1484,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "0c576bc8",
+   "id": "c244a31f",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "ce8de853",
+   "id": "5be14214",
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "fc8e3154",
+   "id": "ffa9cc7e",
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19836728",
+   "id": "cea0e8c0",
    "metadata": {},
    "source": [
     "menggabungkan plot-plot di atas dengan bantuan `grid`:"
@@ -1606,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "394d1272",
+   "id": "1872d094",
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6694c4fd",
+   "id": "1f4777d0",
    "metadata": {},
    "source": [
     "### Latihan\n",
@@ -1697,7 +1694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "672710c1",
+   "id": "8be1ea67",
    "metadata": {},
    "source": [
     "# Solusi 1\n",
@@ -1708,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "8c9e3f63",
+   "id": "b1ed1ade",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "dc082b62",
+   "id": "4019bce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "8f36fe4c",
+   "id": "d1bc801f",
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "4a58e155",
+   "id": "33af995b",
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470c1908",
+   "id": "97691bf4",
    "metadata": {},
    "source": [
     "## Solusi 2"
@@ -1909,7 +1906,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "bc32f92a",
+   "id": "1447e93a",
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "3271e815",
+   "id": "dc685fa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "f0005e28",
+   "id": "5d9f1cdd",
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +2021,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "7353ff47",
+   "id": "9b12fbdd",
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "b0aed1d6",
+   "id": "cd444c3b",
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a455e8d",
+   "id": "2da3b50d",
    "metadata": {},
    "source": [
     "plot yang lebih rapi"
@@ -2133,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "6e008b3f",
+   "id": "7d689015",
    "metadata": {},
    "outputs": [
     {
@@ -2228,7 +2225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f210557",
+   "id": "12ea6a1d",
    "metadata": {},
    "source": [
     "# Referensi\n",
@@ -2241,7 +2238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1d3a12",
+   "id": "d14e9ef5",
    "metadata": {},
    "source": []
   }
