change merapi output location

--- a/2_Earthquake_Source_Simple_2_1.ipynb
+++ b/2_Earthquake_Source_Simple_2_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a3f12eb3",
+   "id": "a34aaaa3",
    "metadata": {},
    "source": [
     "<div style=\"background-color: #28a745 !important; color: white; min-height: 50px; padding: 10px; margin: auto;\">\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ac265e3",
+   "id": "1eb21eb4",
    "metadata": {},
    "source": [
     "## Penentuan Hiposenter Pendekatan Analitik: Metode Geiger\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7fc3ebca",
+   "id": "f6bd7fa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ffcee5f",
+   "id": "f437d866",
    "metadata": {},
    "source": [
     "kemudian membuat fungsi untuk menghitung waktu tempuh sesuai dengan persamaan maju, fungsi ini akan kita pakai juga saat inversi nanti:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "010af2ee",
+   "id": "b53b0642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72de9b59",
+   "id": "41681c6e",
    "metadata": {},
    "source": [
     "selanjutnya adalah menghitung waktu tiba sintetik untuk masing-masing stasiun:"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4d4bab9b",
+   "id": "874436ae",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2465bb2",
+   "id": "83ea4067",
    "metadata": {},
    "source": [
     "#### Membuat tebakan\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8231b043",
+   "id": "438d03c3",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82da84c2",
+   "id": "849f49f2",
    "metadata": {},
    "source": [
     "#### Menghitung error  data\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a0d7c04",
+   "id": "14a4a01d",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc27cf9",
+   "id": "d62709a8",
    "metadata": {},
    "source": [
     "dari data kalkulasi yang kita dapatkan $d_{calc}$ kita hitung nilai errornya dengan mengurangkan secara sederhana:"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "be883a2a",
+   "id": "80eaa064",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b68e766",
+   "id": "7b197960",
    "metadata": {},
    "source": [
     "di atas merupakan perbedaan data observasi dan data_kalkulasi yang dapat kita simbolkan dengan $\\Delta d$, dengan nilai ini kita dapat melakukan inversi untuk mendapatkan koreksi model tetapi sebelumnya kita harus membuat algoritma untuk mencari matriks $G$."
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1406e6",
+   "id": "cc2a9771",
    "metadata": {},
    "source": [
     "#### Membuat matriks Jacobian\n",
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b68fb386",
+   "id": "fa400c1e",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc62d91",
+   "id": "bde8ff8e",
    "metadata": {},
    "source": [
     "#### Melakukan inversi\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0af4e01c",
+   "id": "ef84e999",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35942a76",
+   "id": "5c0747cf",
    "metadata": {},
    "source": [
     "nilai koreksi model ($\\Delta m$) diatas akan kita gunakan untuk mengoreksi model awal `guess`:"
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8f467f03",
+   "id": "248b3a5b",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b3dafb8",
+   "id": "1d5e23d0",
    "metadata": {},
    "source": [
     "dapat kita lihat bahwa nilai hiposenter dan tebakan sudah mulai mendekat ke nilai sebenarnya (16,15,17) dari tebakan awal (15,16,16). Untuk mengkuantifikasi dekat atau tidak kita dapat menggunakan nilai misfit dari $L_2$ norm:"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aaa84436",
+   "id": "4956220b",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e248cc9",
+   "id": "bcc45cb2",
    "metadata": {},
    "source": [
     "## Implementasi Iteratif\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0078d8b1",
+   "id": "d0c94e19",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f49c0411",
+   "id": "8e5a567b",
    "metadata": {},
    "source": [
     "## Mengeplot hasil\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "55336957",
+   "id": "333d8713",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb03bc9",
+   "id": "dfdb0175",
    "metadata": {},
    "source": [
     "dari plot di atas dapat kita lihat bahwa titik bergeser dan lama-lama mendekati hiposenter sebenarnya, untuk memperjelas kita akan coba *zoom*:"
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "47493344",
+   "id": "4d764806",
    "metadata": {
     "scrolled": true
    },
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d5e507",
+   "id": "66ee3a33",
    "metadata": {},
    "source": [
     "## Latihan\n",
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9fc32d6",
+   "id": "3dd4fb1d",
    "metadata": {},
    "source": [
     "## Solusi"
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "56e66725",
+   "id": "aabbfbff",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692213f2",
+   "id": "88528b43",
    "metadata": {},
    "source": [
     "### Bonus Plot dengan DEM"
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "838bf7af",
+   "id": "93dc6c93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,8 +836,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2d9fe318",
+   "execution_count": 23,
+   "id": "25b327ac",
    "metadata": {},
    "outputs": [
     {
@@ -913,16 +913,8 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.legend()\n",
-    "plt.savefig(\"merapi.png\", dpi=144)"
+    "plt.savefig(\"output/merapi.png\", dpi=144)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9a6c844",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
